# id3v2

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
docker/: alpine.Dockerfile  rpm.Dockerfile
examples/: CMakeLists.txt  edit_tag.c  hash.c  scan_dir.c
src/include/: id3v2.h  jhid3v2.h
src/include/id3v2/: synch.h  types.h  unicode.h
src/lib/: CMakeLists.txt  helpers.c  id3v2.c  synch.c  unicode.c
src/test/: CMakeLists.txt  main.c  unicode.c
